third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/time-no-leads-2.stderr
TOML parse error at line 2, column 11
  |
2 | d = 01:32:0
  |           ^
invalid time
